# Djule

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
djule/: __init__.py
djule/compiler/: render_plan.py  renderer.py
djule/parser/: __init__.py  __main__.py  analyzer.py  ast_nodes.py  lexer.py  parser.py  printer.py  tokens.py  tree_printer.py
examples/: 01_simple_page.djule  02_component_import.djule  03_children.djule  04_logic_above_return.djule  05_embedded_if_else.djule  06_embedded_for.djule  07_nested_components.djule  08_django_request_props.djule  10_module_imports.djule  12_cache_demo.djule  13_multi_component_cache_demo.djule  README.md  simple_page_01.djule
examples/components/: layout.djule  navigation.djule  ui.djule
examples/feature/components/: ui.djule
examples/feature/pages/deep/: 09_relative_imports.djule  11_absolute_imports.djule
plans/: AST_V1.md  BEFORE_PROD.md  PARSER_V1.md  README.md  SYNTAX_V1.md  SYNTAX_V1_PLAN.md  TEMPLATE_PLAN.md
src/compiler/: __init__.py  cache_support.py  import_support.py  plan_support.py  render_plan.py  render_support.py  renderer.py  types.py
src/djule/: __init__.py
src/djule/compiler/: cache_support.py  import_support.py  plan_support.py  render_plan.py  render_support.py  renderer.py  types.py
src/djule/integrations/: __init__.py  apps.py  django.py  django_backend.py
src/djule/parser/: __init__.py  __main__.py  analyzer.py  ast_nodes.py  lexer.py  parser.py  printer.py  tokens.py  tree_printer.py
src/integrations/: django.py
src/parser/: __main__.py  ast_nodes.py  parser.py
syntax/: djule_syntax_preview.html  djule_syntax_preview_embedded_logic.html
syntax/vscode-djule/: .vscodeignore  LICENSE  README.md  djule-1.0.0.vsix  djule-1.0.1.vsix  djule-1.0.2.vsix  djule-1.0.3.vsix  djule-1.0.4.vsix  djule-icon-theme.json  extension.js  language-configuration.json  package.json
syntax/vscode-djule/lib/: completions.js  constants.js  definitions.js  diagnostics.js  diagnostics_server.js  globals.js  runtime.js  symbols.js
syntax/vscode-djule/syntaxes/: djule.tmGrammar.json
syntax/vscode-djule/test/: definitions.test.js  runtime.test.js
tests/: fixture_django_tags.py  fixture_paths.py  test_cli.py  test_django_integration.py  test_lexer.py  test_parser.py  test_printer.py  test_renderer.py  test_tree_printer.py
