[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djule"
version = "2.0.0"
description = "Python-first templating language and runtime for server-rendered UI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rhxrr" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
  "Development Status :: 5 - Production/Stable",
]
dependencies = []

[project.scripts]
djule = "djule.parser.__main__:main"

[project.optional-dependencies]
django = ["Django>=4.2"]
test = ["Django>=4.2"]
dev = ["Django>=4.2"]

[project.urls]
Repository = "https://github.com/Rhxrrr/Djule"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["djule", "djule.*"]
